# s-kernel-rust

./: .gitignore  Cargo.toml  Makefile  linker.ld
.cargo/: config.toml
arch/aarch64/: Cargo.toml
arch/aarch64/src/: context.rs  entry.rs  gic.rs  interrupt.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs  list.rs
driver/: Cargo.toml
fs/: Cargo.toml
ipc/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: kernel.rs  lib.rs
mem/: Cargo.toml
shell/: Cargo.toml
user/: Cargo.toml
