[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
arch = { path = "../arch/aarch64" }
common = { path = "../common" }
mem = { path = "../mem" }
driver = { path = "../driver" }
fs = { path = "../fs" }
ipc = { path = "../ipc" }
shell = { path = "../shell" }

[features]
default = []
